5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1728_2498.log
== TEST (2019-05-13 19:29:52) 
-- CODE:
a = int(input("habitantes de A: "))
b = int(input("habitantes de B: "))
percentual_de_a = float(input("porcentagem da cidade A: "))
percentual_de_b = float(input("porcentagem da cidade B: "))
ab = a - b
aa = 0
ba = 0
while(a < b):
	hab_a = a * (percentual_de_a / 100)
	a = a + hab_a
	
	hab_b = b * (percentual_de_b / 100)
	b = b + hab_b
	con = con + 1
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    con = con + 1
NameError: name 'con' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:30:16) 
-- CODE:
a = int(input("habitantes de A: "))
b = int(input("habitantes de B: "))
percentual_de_a = float(input("porcentagem da cidade A: "))
percentual_de_b = float(input("porcentagem da cidade B: "))
ab = a - b
aa = 0
ba = 0
while(a < b):
	hab_a = a * (percentual_de_a / 100)
	a = a + hab_a
	
	hab_b = b * (percentual_de_b / 100)
	b = b + hab_b
	cont = cont + 1
	print(cont)
-- EXECUTION TIME:
0.1469
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1728/2498/main.py", line 14, in <module>
    cont = cont + 1
NameError: name 'cont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:30:25) 
-- CODE:
a = int(input("habitantes de A: "))
b = int(input("habitantes de B: "))
percentual_de_a = float(input("porcentagem da cidade A: "))
percentual_de_b = float(input("porcentagem da cidade B: "))
ab = a - b
aa = 0
ba = 0
while(a < b):
	hab_a = a * (percentual_de_a / 100)
	a = a + hab_a
	
	hab_b = b * (percentual_de_b / 100)
	b = b + hab_b
	cont = cont + 1
print(cont)
-- EXECUTION TIME:
0.139674
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1728/2498/main.py", line 14, in <module>
    cont = cont + 1
NameError: name 'cont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:30:36) 
-- CODE:
a = int(input("habitantes de A: "))
b = int(input("habitantes de B: "))
percentual_de_a = float(input("porcentagem da cidade A: "))
percentual_de_b = float(input("porcentagem da cidade B: "))
ab = a - b
aa = 0
ba = 0
cont = 0
while(a < b):
	hab_a = a * (percentual_de_a / 100)
	a = a + hab_a
	
	hab_b = b * (percentual_de_b / 100)
	b = b + hab_b
	cont = cont + 1
print(cont)
-- EXECUTION TIME:
0.145631
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:32:06) 
-- CODE:
a = int(input("habitantes de A: "))
b = int(input("habitantes de B: "))
percentual_de_a = float(input("porcentagem da cidade A: "))
percentual_de_b = float(input("porcentagem da cidade B: "))
ab = a - b
aa = 0
ba = 0
cont = 0
while(a < b):
	hab_a = a * (percentual_de_a / 100)
	a = a + hab_a
	
	hab_b = b * (percentual_de_b / 100)
	b = b + hab_b
	cont = cont + 1
print(cont)
-- EXECUTION TIME:
0.219795
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
